--- a/index.html
+++ b/index.html
@@ -69,7 +69,13 @@
   </head>
 
   <body>
-    <div id="preloader"><h1><span>7</span>St<span class="o">O</span>ck<span>H</span>oldings</h1> 
+    <!-- <div id="preloader"><h1><span>7</span>St<span class="o">O</span>ck<span>H</span>oldings</h1> 
+    </div> -->
+
+    <div id="preloader">
+      <div class="loader">
+        
+      </div>
     </div>
 
     <!-- <div class="center_div">
