--- a/news_room1.html
+++ b/news_room1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Latest News</title>
+    <title>News Room</title>
     <!-- Bootstrap  -->
     <!-- FavIcon-->
     <link rel="shortcut icon" href="./assets/favicon/favicon.png" type="image/x-icon">
