consult page done for pc

--- a/blog.html
+++ b/blog.html
@@ -85,7 +85,7 @@
                 <div class="collapse navbar-collapse" id="navbarText">
                   <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                      <a class="nav-link" href="./consulting_main.html">컨설팅 중인 기업</a>
+                      <a class="nav-link" href="./consulting.html">컨설팅 중인 기업</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="./news_room1.html">뉴스룸</a>
@@ -100,7 +100,7 @@
                       <a class="nav-link" href="./blog.html">블로그</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">상담문의</a>
+                      <a class="nav-link" href="./contact-us.html">상담문의</a>
                     </li>
                   </ul>
                   <span class="navbar-text">
@@ -136,12 +136,12 @@
           </div>
           <div class="mymobile-menu">
             <ul>
-              <li><a href="./consulting_main.html">컨설팅 중인 기업</a></li>
+              <li><a href="./consulting.html">컨설팅 중인 기업</a></li>
               <li><a href="./news_room1.html">뉴스룸</a></li>
               <li><a href="./aboutus.html">회사소개</a></li>
               <li><a href="./service.html">서비스</a></li>
               <li><a href="./blog.html">블로그</a></li>
-              <li><a href="#">상담문의</a></li>
+              <li><a href="./contact-us.html">상담문의</a></li>
             </ul>
             <div class="mphone">
               <a class="mobile-phone" href="tel:832 939 8280"
